# firebird

./: .gitattributes  .gitignore  120.9c994f09a9dfdf52.js  1257.0f03fce3732f2a5a.js  1282.b93c0121125e2d04.js  150.5350f97ad1375218.js  1566.831b965b14da3160.js  1914.9220750ecca8456e.js  1965.b5c50d8fd0615a07.js  2010.25f593fdbed2aca0.js  2101.ae56c24b777e9e62.js  2446.31f598d9eb388239.js  2573.133e1dff4c1c8cae.js  2677.80ef7ea706877983.js  2833.a691f095ee96e7a6.js  2855.9f1468e644138090.js  2979.840da5d21467d7f5.js  3026.a9bfe22642f599e8.js  3050.e46da9b842f9adef.js  316.cd5418438e8cebd3.js  322.6fbb508d8d00a13c.js  3339.174a445e16363197.js  3399.bbce920ca75dcacc.js  3623.bf1e2da16e2ec9bc.js  3650.55949eb089832867.js  3675.ab723364bc4a299f.js  392.c8717add27455974.js  3rdpartylicenses.txt  404.html  4102.b4cb235991101cbc.js  423.50747d7881ea1029.js  4268.552a0afbee9b1b32.js  430.f33f440d89d891c6.js  4316.4348a283421c1d00.js  4330.6d81371efaa927cc.js  437.fd41f99986beb309.js  4392.104d8191449cd6b6.js  4600.2800675f456d9fc3.js  4690.3f5b1d5f785c0050.js  4693.85579d979e515396.js  (+79 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflow/: frontend.yaml
.github/workflows/: codeql.yml  docs.yaml  frontend.yaml  integration-tests.yml  pyrobird.yaml
dd4hep-plugin/: .gitignore  CMakeLists.txt  README.md  background_steering.py  cuts_example_steering.py  firebird_steering.py  optical_steering.py  run_all_energies.py  save_all_steering.py  steering.py  stepping_steering.py  test.edm4eic.firebird.json  text_dump_steering.py
dd4hep-plugin/src/: FirebirdTrajectoryWriterEventAction.cpp  FirebirdTrajectoryWriterSteppingAction.cpp  TextDumpingSteppingAction.cpp
doc/: animation_tween.html  dd4hep-plugin.md  intro.md  pyrobird.md
doc/tutorials/: 01_basic_ui.md
docs/: _sidebar.md  dd4hep-plugin.md  dd4hep-plugin.mdx  design.md  dex.md  eic-requirements.md  frontend-design.md  geometry-rules.md  index.md  index_old.mdx  package-lock.json  package.json  pyrobird.md  rspress.config.ts  tsconfig.json
docs/.vitepress/: config.mts
docs/tutorials/: 01_02_ui_labels.drawio  01_04_fir.drawio  01_04_inputs.drawio  01_basic_ui.md  01_basic_ui.mdx  02_run_local.md  02_run_local.mdx  03_saving_video.md  tmp.drawio
firebird/: 226.6593b532fcb4449c.js  245.4c4e578401cf46dd.js  330.f49dfe04a4666fa6.js  393.b01e8d4cd1e453a6.js  397.f4bf313ec2d5f648.js  484.f32051fd9bacc1e9.js  559.90ab8f10054a05bb.js  583.9d27f11992472919.js  680.c07ac819402a3136.js  693.48b14c1cd7316b7f.js  810.d80565047b04a340.js  843.1fcf8f2266684c21.js  855.75468f788ee7a32c.js  86.3db742df7733328c.js  902.cf83dd80905b77af.js  914.6782df9c49f2e661.js  979.ca1014549db52602.js  bundle-report.html  polyfills.8427f07fec59ab5f.js  runtime.f43ed57c39d5b73a.js  styles.0622049b53d604eb.css
firebird-ng/: .repomixignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  repomix.config.json  tsconfig.json  webpack.config.js
firebird-ng/.claude/: settings.local.json
firebird-ng/src/: index.html  m3-theme.scss  main.ts  material-themes.scss  styles.scss  test-setup.ts
firebird-ng/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  data-model.service.ts  edm4hep-root-event-loader.ts  eic-edm4hep-json-loader.ts  event-loader.worker.ts  firebird-config.service.spec.ts  firebird-config.service.ts  game-controller.service.spec.ts  game-controller.service.ts  geometry.service.ts  root-geometry.processor.ts  server-config.service.spec.ts  server-config.service.ts  three-event.processor.ts  three-geometry.processor.ts  url.service.spec.ts  url.service.ts  user-config.service.spec.ts  user-config.service.ts
firebird-ng/src/app/animation/: animation-manager.ts  default-animations.ts
firebird-ng/src/app/data-pipelines/: calorimetry.prettifier.ts  root-geometry.processor.ts  three-event.processor.ts  three-geometry.processor.spec.ts  three-geometry.processor.ts
firebird-ng/src/app/edm4hep-listing/: edm4hep-listing.component.html  edm4hep-listing.component.spec.ts  edm4hep-listing.component.ts
firebird-ng/src/app/file-browser/: file-browser.component.spec.ts  file-browser.component.ts
firebird-ng/src/app/geometry-prettifiers/: calorimetry.prettifier.ts
firebird-ng/src/app/geometry-tree/: geometry-tree.component.html  geometry-tree.component.spec.ts  geometry-tree.component.ts
firebird-ng/src/assets/: config-eic-ghpages.jsonc  config-eic.jsonc  config.jsonc
firebird-ng/src/lib-root-geometry/: root-geo-attribute-bits.spec.ts  root-geo-attribute-bits.ts  root-geo-edit.model.ts  root-geo-edit.spec.ts  root-geo-edit.ts  root-geo-navigation.spec.ts  root-geo-navigation.ts
pyrobird/: MANIFEST.in  README.md  example_gunicorn_wsgi.py  example_simple_wsgi.py  example_wsgi.py  ng_build_copy.py  pyproject.toml
pyrobird/pyrobird/: __about__.py  __init__.py  __version__.py  cern_root.py  dex_utils.py  edm4eic.py  utils.py
pyrobird/pyrobird/cli/: __init__.py  convert.py  geo.py  merge.py  screenshot.py  serve.py  smooth.py
pyrobird/pyrobird/data/: eic_geo_process_rules.yaml
pyrobird/pyrobird/server/: __init__.py
pyrobird/src/pyrobird/: __about__.py  __init__.py  edm4eic.py
pyrobird/src/pyrobird/cli/: __init__.py  __main__.py  convert.py  screenshot.py  serve.py
pyrobird/src/pyrobird/cli/geo/: __init__.py
pyrobird/src/pyrobird/cli/serve/: __init__.py
pyrobird/src/pyrobird/server/: __init__.py
pyrobird/src/pyrobird/server/static/: .gitignore
pyrobird/tests/: __init__.py  cli_commands.md  test_cli.py  test_cli_merge.py  test_edm4eic.py  test_server.py  test_server_start.py
pyrobird/tests/data/: invalid_file.root  reco_2024-09_craterlake_2evt.edm4eic.root
pyrobird/tests/integration_tests/: run_integration_tests.py  test_server_start.py
pyrobird/tests/unit_tests/: test_cli.py  test_cli_convert.py  test_cli_merge.py  test_cli_screenshot.py  test_server.py  test_utils.py  ttree_cutter.py
test/: README.md  color-palette.html  open_xrootd_uproot.py  run_background.py  run_many_energies.py
(+270 files in other folders)
