[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobird"
dynamic = ["version"]
description = "pyrobird is a python backend for Firebird HENP event display"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
keywords = []
authors = [
  { name = "Dmitry Romanov", email = "romanovda@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "click",
  "rich",
  "pyyaml",
  "flask",
  "flask-cors",
  "flask-compress>=1.8.0",
  "json5",
  "uproot"
]

[project.optional-dependencies]
batch = ["playwright"]
xrootd = ["fsspec-xrootd", "xrootd"]
dev = ["build", "twine", "coverage", "pytest"]

[project.scripts]
fbd = "pyrobird.cli:cli_app"
pyrobird = "pyrobird.cli:cli_app"

[tool.setuptools]
packages = ["pyrobird"]

[tool.setuptools.dynamic]
version = { attr = "pyrobird.__version__" }
